--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["*://*.wikipedia.org/*"],
+            "matches": ["*://*.wikipedia.org/*action=edit*"],
             "run_at":"document_end",
             "js": ["js/lib/requirejs/require.js","js/requireContent.js","js/common.js","js/content.js"],
             "css": ["js/lib/jquery-ui/themes/smoothness/jquery-ui.css","js/lib/tag-it/css/jquery.tagit.css", "js/lib/c4/searchBar/searchBar.css", "css/content.css"]
