--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
         {
             "matches": ["*://*.wikipedia.org/*action=edit*"],
             "run_at":"document_end",
-            "js": ["js/lib/requirejs/require.js","js/requireContent.js","js/common.js","js/content.js"],
+            "js": ["js/lib/requirejs/require.js","js/requireContent.js","js/common.js","js/content.js","js/cmsMarkup.js"],
             "css": ["js/lib/jquery-ui/themes/smoothness/jquery-ui.css","js/lib/tag-it/css/jquery.tagit.css", "js/lib/c4/searchBar/searchBar.css", "css/content.css"]
         }
     ],
