--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "EEXCESS",
+    "name": "EEXCESS-Wiki-Recommender",
     "version": "1.4.2",
     "background": {
         "page": "html/background.html"
