--- a/manifest.json
+++ b/manifest.json
@@ -34,8 +34,7 @@
          "chrome_style":true
     },
     "browser_action":{
-        "default_icon":"media/icons/19.png",
-        "default_popup":"html/popup.html"
+        "default_icon":"media/icons/19.png"
     }
 }
 
