--- a/manifest.json
+++ b/manifest.json
@@ -1,40 +1,57 @@
 {
-    "name": "EEXCESS-Wiki-Recommender",
-    "version": "1.4.2",
-    "background": {
-        "page": "html/background.html"
-    },
-    "content_scripts": [
-        {
-            "matches": ["*://*.wikipedia.org/*action=edit*","*://*.wikipedia.org/*action=submit*"],
-            "run_at":"document_end",
-            "js": ["js/lib/requirejs/require.js","js/requireContent.js","js/common.js","js/content.js","js/markup.js"],
-            "css": ["js/lib/jquery-ui/themes/smoothness/jquery-ui.css","js/lib/tag-it/css/jquery.tagit.css", "js/lib/c4/searchBar/searchBar.css", "css/content.css"]
-        }
-    ],
-
-    "web_accessible_resources": [
-        "js/*",
-        "visualization-widgets/*",
-        "media/*",
-        "html/*"
-    ],
-    "manifest_version": 2,
-    "permissions": [
-        "tabs",
-        "<all_urls>",
-        "background",
-        "storage"
-    ],
-    "icons": {"16": "media/icons/16.png",
-        "48": "media/icons/48.png",
-        "128": "media/icons/128.png"},
-    "options_ui":{
-        "page": "html/options.html",
-         "chrome_style":true
-    },
-    "browser_action":{
-        "default_icon":"media/icons/19.png"
+  "name": "EEXCESS-Wiki-Recommender",
+  "version": "1.4.2",
+  "background": {
+    "page": "html/background.html"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "*://*.wikipedia.org/*action=edit*",
+        "*://*.wikipedia.org/*action=submit*"
+      ],
+      "run_at": "document_end",
+      "js": [
+        "js/lib/requirejs/require.js",
+        "js/requireContent.js",
+        "js/common.js",
+        "js/content.js",
+        "js/sidebar.js",
+        "js/markup.js"
+      ],
+      "css": [
+        "js/lib/jquery-ui/themes/smoothness/jquery-ui.css",
+        "js/lib/tag-it/css/jquery.tagit.css",
+        "js/lib/c4/searchBar/searchBar.css",
+        "css/content.css",
+        "css/sidebar.css"
+      ]
     }
+  ],
+  "web_accessible_resources": [
+    "js/*",
+    "visualization-widgets/*",
+    "media/*",
+    "html/*"
+  ],
+  "manifest_version": 2,
+  "permissions": [
+    "tabs",
+    "<all_urls>",
+    "background",
+    "storage"
+  ],
+  "icons": {
+    "16": "media/icons/16.png",
+    "48": "media/icons/48.png",
+    "128": "media/icons/128.png"
+  },
+  "options_ui": {
+    "page": "html/options.html",
+    "chrome_style": true
+  },
+  "browser_action": {
+    "default_icon": "media/icons/19.png"
+  }
 }
 
