#4 renamed sidebar.js to searchSidebar.js (cf. searchbar.js), handles messaging and calls between iframe and bg.js

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
         "js/requireContent.js",
         "js/common.js",
         "js/content.js",
-        "js/sidebar.js",
+        "js/searchSidebar.js",
         "js/markup.js"
       ],
       "css": [
