--- a/manifest.json
+++ b/manifest.json
@@ -48,11 +48,10 @@
     "48": "media/icons/48.png",
     "128": "media/icons/128.png"
   },
-//,
-//  "options_ui": {
-//    "page": "html/options.html",
-//    "chrome_style": true
-//  },
+  "options_ui": {
+    "page": "html/options.html",
+    "chrome_style": true
+  },
   "browser_action": {
     "default_icon": "media/icons/19.png"
   }
