--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,8 @@
         "js/lib/c4/searchBar/searchBar.css",
         "css/content.css",
         "css/sidebar.css",
-        "js/fancybox/jquery.fancybox.css"
+        "js/fancybox/jquery.fancybox.css",
+        "css/font-awesome/css/font-awesome.css"
       ]
     }
   ],
@@ -34,7 +35,8 @@
     "js/*",
     "visualization-widgets/*",
     "media/*",
-    "html/*"
+    "html/*",
+    "css/*"
   ],
   "manifest_version": 2,
   "permissions": [
